--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,25 @@
-<h2>Sobre mim</h2>
-
-<p>
-  <strong> Olá! Me chamo Luís Paulo e sou um desenvolvedor full stack.</strong>
-  Gosto muito da área de tecnologia, e tenho certeza que posso contribuir em
-  qualquer time com as minhas habilidades
-</p>
-<p>
-  Estou sempre me desafiando com novos projetos e participando de comunidades de
-  programação para buscar feedback de outros desenvolvedores e desenvolvedoras.
-  Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
-</p>
-<p>Além disso, gosto de filmes, séries e futebol.</p>
+<div class="about">
+  <h2>Sobre mim</h2>
+  <div class="container-content">
+    <div class="picture">
+      <img src="../../assets/images/foto-perfil.jpeg" alt="" />
+    </div>
+    <div class="content">
+      <p>
+        <strong>Olá! Meu nome é Luís Paulo</strong> e sou um entusiasta de
+        tecnologia, especializado em desenvolvimento full stack.
+      </p>
+      <p>
+        Minha paixão por criar soluções inovadoras me levou a explorar o
+        universo da programação, e hoje sou proficiente em tecnologias como
+        Angular, Java e Spring Boot.
+      </p>
+      <p>
+        Atuo com desenvolvimento de projetos desafiadores, utilizando as
+        melhores práticas e buscando constantemente aprimorar minhas habilidades
+        técnicas. Tenho uma abordagem proativa e estou sempre empenhado em
+        encontrar as melhores soluções para os desafios que encontro.
+      </p>
+    </div>
+  </div>
+</div>
