--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <app-header></app-header>
-  <app-home></app-home>
-  <app-about></app-about>
+  <app-home id="home"></app-home>
+  <app-about id="about"></app-about>
+  <app-about id="skills"></app-about>
 </div>
