--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,15 +1,23 @@
-ul{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    justify-content: flex-end;
+.nav {
+  padding: 10px 4%;
+  background-color: transparent;
+}
+.scrolled {
+  background-color: white;
+}
+ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: flex-end;
 }
 
-a{
-    color: #48729d;
-    padding-right: 20px;
-    font-family: "Inter";
-    font-size: 16px;
-    font-weight: 600;
-    text-decoration: none;
+li {
+  color: #000000;
+  padding-right: 20px;
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: none;
+  cursor: pointer;
 }
