--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@import "../../app/theme/styles/mixins.scss";
+
 .nav {
   padding: 10px 4%;
   background-color: transparent;
@@ -5,11 +7,39 @@
 .scrolled {
   background-color: white;
 }
-ul {
+
+.burguer{
+  display: none;
+
+  @include responsive(md) {
+    display: flex;
+    background-color: transparent;
+    border: 1px solid black;
+  }
+}
+
+.menu {
   display: flex;
   flex-direction: row;
   list-style: none;
   justify-content: flex-end;
+
+  @include responsive(md) {
+    display: none;
+    
+    &.is-open{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+}
+
+.toggle{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 70px;
 }
 
 li {
@@ -20,4 +50,9 @@ li {
   font-weight: 600;
   text-decoration: none;
   cursor: pointer;
+}
+
+li:hover {
+  color: #06044d;
+  transition: 0.4s ease-in-out;
 }
