--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,30 @@
 <div class="background">
-    <div class="container-content">
+  <div class="container-content">
     <p>Olá! Meu nome é</p>
     <h1 class="nome">Luis Paulo Brito.</h1>
     <h2 class="cargo">Eu sou Desenvolvedor Full Stack.</h2>
+    <div class="social-medias">
+      <a
+        href="https://www.linkedin.com/in/luispaulobrito/"
+        target="_blank"
+        class="social-media"
+      >
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+      <a
+        href="https://github.com/luispaulobrito"
+        target="_blank"
+        class="social-media"
+      >
+        <i class="fab fa-github"></i>
+      </a>
+      <a
+        href="https://wa.me/5583999195876"
+        target="_blank"
+        class="social-media"
+      >
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
   </div>
 </div>
