--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,30 +1,60 @@
-.about{
+@import "../../app/theme/styles/mixins.scss";
+
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 40rem;
+
+  @include responsive(sm) {
+    height: 50rem;
+  }
+}
+
+.about h2 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.container-content {
+  display: flex;
+  justify-content: center;
+  margin: 3rem;
+
+  @include responsive(sm) {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 40rem;
+    align-items: center;
+    margin: 2rem;
+  }
 }
 
-.about h2{
-    text-align: center;
-    font-size: 3rem;
-}
-
-.container-content{
-    display: flex;
-    justify-content: center;
-    margin: 3rem;
-}
-
-.picture img{
+.picture {
+  @include responsive(sm) {
     width: 70%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.content{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    font-size: 1.2rem;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
+.picture img {
+  width: 70%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.2rem;
+
+  @include responsive(sm) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 2rem;
+  }
 }
