--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <app-header></app-header>
   <app-home id="home"></app-home>
   <app-about id="about"></app-about>
-  <app-about id="skills"></app-about>
+  <!-- <app-about id="skills"></app-about> -->
 </div>
