--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -44,15 +44,28 @@
 
 li {
   color: #000000;
-  padding-right: 20px;
+  padding-right: 30px;
+  padding-bottom: 10px;
   font-family: "Inter";
   font-size: 16px;
   font-weight: 600;
   text-decoration: none;
   cursor: pointer;
+  position: relative;
 }
 
-li:hover {
-  color: #06044d;
-  transition: 0.4s ease-in-out;
+
+li::after{
+  content: " ";
+  width: 0%;
+  height: 4px;
+  background-color: #000000;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: 0.5s ease-in-out;
+}
+
+li:hover::after {
+  width: 80%;
 }
