secoes footer portfolio e resume criadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
   <app-home id="home"></app-home>
   <app-about id="about"></app-about>
   <app-skills id="skills"></app-skills>
+  <app-resume id="resume"></app-resume>
+  <app-portfolio id="portfolio"></app-portfolio>
+  <app-footer></app-footer>
 </div>
