--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -1,6 +1,6 @@
 @import "../../app/theme/styles/mixins.scss";
 
-.skills {
+.resume {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,7 +12,7 @@
   }
 }
 
-.skills h2 {
+.resume h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
