--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   height: 40rem;
-  background-color: #9d9deb;
+  background-color: #52618a;
 
   @include responsive(sm) {
     height: 50rem;
@@ -26,9 +26,9 @@ p{
 }
 
 i{
-    font-size: 13px;
-    color: #044d8d;
-    padding-right: 5px;
+    font-size: 10px;
+    color: #0c2b47;
+    padding-right: 12px;
 }
 
 .content {
