background color skills

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   height: 40rem;
-  background-color: #52618a;
+  background-color: #5f6a890f;
 
   @include responsive(sm) {
     height: 50rem;
