--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -15,12 +15,12 @@
       </div>
       <div class="experiences">
         <h3>Experiências</h3>
-        <div class="experience" *ngFor="let course of courses">
+        <div class="experience" *ngFor="let experience of experiences">
           <i class="fa-solid fa-angle-right"></i>
           <div>
-            <p class="name">{{ course.name }}</p>
-            <p class="institution">{{ course.institution }}</p>
-            <p class="year">{{ course.year }}</p>
+            <p class="name">{{ experience.name }}</p>
+            <p class="institution">{{ experience.institution }}</p>
+            <p class="year">{{ experience.year }}</p>
           </div>
         </div>
       </div>
