--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 40rem;
-
+  height: 100%;
+  margin: 4rem;
+  
   @include responsive(sm) {
     height: 50rem;
   }
@@ -17,25 +18,60 @@
   align-items: center;
   font-size: 3rem;
   padding-bottom: 4rem;
+  padding-top: 8rem;
 }
 
-p{
-    display: flex;
-    align-items: center;
-}
-
-i{
-    font-size: 13px;
-    color: #044d8d;
-    padding-right: 5px;
-}
-
-.content {
+.container-content{
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
-  font-size: 1.3rem;
+}
 
-  @include responsive(sm) {
-    font-size: 1rem;
-  }
+.portfolio-content{
+  display: flex;
+  flex-direction: column;
+  width: 16rem;
+  position: relative;
+}
+
+img{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  height: 100%;
+}
+
+.portfolio-content:hover .description-container{
+  opacity: 0.8;
+}
+
+.description-container{
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  color: rgb(236, 236, 236);
+  background-color: black;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+a{
+  color: rgb(236, 236, 236);
+  text-decoration: none;
+}
+
+h3{
+  font-size: 1rem;
+  font-weight: 500;
+  position: absolute;
+  bottom: 0;
+  color: rgb(236, 236, 236);
+  background-color: black;
+  width: 100%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  opacity: 0.7;
 }
