--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -8,7 +8,7 @@
   margin: 4rem;
   
   @include responsive(sm) {
-    height: 50rem;
+    height: 250rem;
   }
 }
 
@@ -26,19 +26,22 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  
 }
 
 .portfolio-content{
   display: flex;
   flex-direction: column;
   width: 16rem;
+  height: 28rem;
   position: relative;
+  margin-bottom: 2rem;
 }
 
 img{
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  height: 100%;
+  // height: 100%;
 }
 
 .portfolio-content:hover .description-container{
