--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -1,7 +1,17 @@
+@import "mixins.scss";
+
 .background {
   background: url(../../../assets/images/header.jpg) no-repeat center
-    center fixed;
+  center fixed;
   background-size: cover;
   width: 100%;
   height: 40rem;
+  
+  @include responsive(md) {
+    background: url(../../../assets/images/header-mobile.jpg) no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    height: 40rem;
+  
+  }
 }
